--- a/package.json
+++ b/package.json
@@ -7,6 +7,16 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/emilohlund-git"
   },
+  "release": {
+    "branches": [
+      "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/github"
+    ]
+  },
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
@@ -26,15 +36,19 @@
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "@types/supertest": "^6.0.2",
     "babel-plugin-module-resolver": "^5.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-openapi": "^0.14.2",
     "nodemon": "^3.0.3",
     "openapi-enforcer": "^1.22.3",
     "openapi-types": "^12.1.3",
+    "semantic-release": "^23.0.2",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-mockito": "^2.6.1",
@@ -55,5 +69,10 @@
     ],
     "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/boot/application.boot.ts",
     "ext": "ts, js"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
