--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
     - name: 🆕 Release
       run: npx semantic-release
       env: 
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        GITHUB_TOKEN: ${{secrets.GH_PAT}}
     - name: 📦 Publish
       run: npm publish
       env:
