fix: :green_heart: Fixing release

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
     - name: 🚀 Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        persist-credentials: false
     - name: 📡 Use Node.js
       uses: actions/setup-node@v4
       with:
