--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A simple framework for building APIs in TypeScript, with a focus on simplicity and no dependencies.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "https://github.com/emilohlund-git/metaroute.git",
+  "repository": "https://github.com/emilohlund-git/metaroute",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/emilohlund-git"
+    "@emilohlund-git:registry": "https://npm.pkg.github.com"
   },
   "release": {
     "branches": [
