--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - main
+
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   build: 
     runs-on: ubuntu-latest
@@ -19,7 +24,7 @@ jobs:
     - name: 🆕 Release
       run: npx semantic-release
       env: 
-        GITHUB_TOKEN: ${{secrets.GH_PAT}}
+        GH_TOKEN: ${{secrets.GH_PAT}}
     - name: 📦 Publish
       run: npm publish
       env:
