--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,11 +21,8 @@ jobs:
         registry-url: "https://npm.pkg.github.com"
     - name: 🔄 Install dependencies
       run: npm ci
-    - name: 🆕 Release
+    - name: 🆕 Release & 📦 Publish
       run: npx semantic-release
       env: 
         GH_TOKEN: ${{secrets.GH_PAT}}
-    - name: 📦 Publish
-      run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{secrets.GH_PAT}}
+        NPM_TOKEN: ${{secrets.GH_PAT}}
