--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple framework for building APIs in TypeScript, with a focus on simplicity and no dependencies.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "https://github.com/emilohlund-git/metaroute",
+  "repository": {
+    "url": "git+https://github.com/emilohlund-git/metaroute.git"
+  },
   "publishConfig": {
     "@emilohlund-git:registry": "https://npm.pkg.github.com"
   },
