--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,20 +9,21 @@ permissions:
   packages: write
 
 jobs:
-  build: 
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: 🚀 Checkout code
-      uses: actions/checkout@v4
-    - name: 📡 Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        registry-url: "https://npm.pkg.github.com"
-    - name: 🔄 Install dependencies
-      run: npm ci
-    - name: 🆕 Release & 📦 Publish
-      run: npx semantic-release
-      env: 
-        GH_TOKEN: ${{secrets.GH_PAT}}
-        NPM_TOKEN: ${{secrets.GH_PAT}}
+      - name: 🚀 Checkout code
+        uses: actions/checkout@v4
+      - name: 📡 Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          registry-url: "https://npm.pkg.github.com"
+      - name: 🔄 Install dependencies
+        run: npm ci
+      - name: 🆕 Release & 📦 Publish
+        run: npx semantic-release
+        env:
+          GH_TOKEN: ${{secrets.GH_PAT}}
+          NPM_TOKEN: ${{secrets.GH_PAT}}
+          NODE_AUTH_TOKEN: ${{ secrets.GH_PAT }}
