fix(socket.io): :bug: Fixed the Socket.IO implementation
The order of operations in the ServerConfigurator was off. Added some documentations on how to implement a socket server.

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "watch": [
       "src"
     ],
-    "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/boot/application.boot.ts",
+    "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/test.ts",
     "ext": "ts, js"
   },
   "husky": {
