feat(RateLimiting): :sparkles: Improved RateLimiting
Appropiately returning headers with remaining tokens, token limit and amount of seconds before next refill.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
       "@validation/*": ["./src/core/validation/*"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
   "exclude": ["node_modules"]
 }
