--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out",
+    "create-docs-feature": "node createPage.js"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
