--- a/docs/package.json
+++ b/docs/package.json
@@ -8,9 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "deploy": "gh-pages -d out",
-    "create-docs-feature": "node createPage.js"
+    "create-docs-feature": "node createPage.js",
+    "generate-docs": "node generate-docs-json.js"
   },
   "dependencies": {
+    "@babel/parser": "^7.24.0",
+    "@babel/traverse": "^7.24.0",
     "@tailwindcss/typography": "^0.5.10",
     "next": "14.1.1",
     "react": "^18",
