--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish Github Package
+name: Publish NPM Package
 on:
   push:
     branches:
@@ -18,12 +18,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          registry-url: "https://npm.pkg.github.com"
       - name: 🔄 Install dependencies
         run: npm ci
       - name: 🆕 Release & 📦 Publish
         run: npx semantic-release
         env:
           GH_TOKEN: ${{secrets.GH_PAT}}
-          NPM_TOKEN: ${{secrets.GH_PAT}}
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
           NODE_AUTH_TOKEN: ${{ secrets.GH_PAT }}
