--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@emilohlund-git/metaroute",
+  "name": "metaroute-ts",
   "version": "1.0.0",
   "description": "A simple framework for building APIs in TypeScript, with a focus on simplicity and no dependencies.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
     "url": "git+https://github.com/emilohlund-git/metaroute.git"
-  },
-  "publishConfig": {
-    "@emilohlund-git:registry": "https://npm.pkg.github.com"
   },
   "release": {
     "branches": [
@@ -17,7 +14,6 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/github",
       "@semantic-release/npm"
     ]
   },
