--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,21 +1,23 @@
-name: Run Tests
+name: Run Tests and Coverage
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - name: 🚀 Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        persist-credentials: false
-    - name: 📡 Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    - name: 🔄 Install dependencies
-      run: npm ci
-    - name: 🧪 Run tests
-      run: npm test
+      - name: 🚀 Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+      - name: 📡 Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+      - name: 🔄 Install dependencies
+        run: npm ci
+      - name: 🧪 Run tests & coverage
+        run: npm run coverage
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
