--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build": "tsc",
     "prepare": "npm run build",
     "test": "jest --detectOpenHandles",
+    "test:coverage": "jest --coverage",
     "coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "keywords": [
