--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,7 +17,5 @@ jobs:
           node-version: "20"
       - name: 🔄 Install dependencies
         run: npm ci
-      - name: 🧪 Run tests & coverage
-        run: npm run coverage
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      - name: 🧪 Coveralls
+        uses: coverallsapp/github-action@v2
