--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,3 +19,5 @@ jobs:
         run: npm ci
       - name: 🧪 Coveralls
         uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GH_PAT }}
