--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,7 +17,9 @@ jobs:
           node-version: "20"
       - name: 🔄 Install dependencies
         run: npm ci
+      - name: 🧪 Run tests with coverage
+        run: npm run coverage
       - name: 🧪 Coveralls
         uses: coverallsapp/github-action@v2
         with:
-          github-token: ${{ secrets.GH_PAT }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
