--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
       - name: 🔄 Install dependencies
         run: npm ci
       - name: 🧪 Run tests with coverage
-        run: npm run coverage
+        run: npm test -- --coverage
       - name: 🧪 Coveralls
         uses: coverallsapp/github-action@v2
         with:
