--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,7 +1,6 @@
 name: Run Tests and Coverage
-on:
-  pull_request:
-    branches: [main]
+on: [pull_request]
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -19,7 +18,7 @@ jobs:
         run: npm ci
       - name: 🧪 Run tests with coverage
         run: npm test -- --coverage
-      - name: 🧪 Coveralls
+      - name: 📊 Coveralls
         uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
