--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "@babel/parser": "^7.24.0",
     "@babel/traverse": "^7.24.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@vercel/analytics": "^1.2.2",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
