--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "dev": "nodemon",
     "prepare": "npm run build",
     "test": "jest --detectOpenHandles",
     "test:coverage": "jest --coverage",
