chore(Test): :art: Separating tsconfig for src & tests folder
Added a tsconfig.test.json to handle path resolutions for the tests folder.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "forceConsistentCasingInFileNames": true,
     "strictPropertyInitialization": false,
     "resolveJsonModule": true,
-    "baseUrl": ".",
+    "baseUrl": "."
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "tests/**/*.ts"]
 }
