--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,18 @@
     "forceConsistentCasingInFileNames": true,
     "strictPropertyInitialization": false,
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@core/*": ["./src/core/*"],
+      "@api/*": ["./src/core/api/*"],
+      "@auth/*": ["./src/core/auth/*"],
+      "@code-first/*": ["./src/core/code-first/*"],
+      "@common/*": ["./src/core/common/*"],
+      "@database/*": ["./src/core/database/*"],
+      "@email/*": ["./src/core/email/*"],
+      "@memory/*": ["./src/core/memory/*"],
+      "@validation/*": ["./src/core/validation/*"]
+    }
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "tests/**/*.ts"]
