feat(WebSocket): :sparkles: Implementing WebSocket server
Creating a WebSocket server from scratch using node's built in net module, and the events module.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   "author": "Emil Ölund",
   "license": "ISC",
   "dependencies": {
-    "reflect-metadata": "^0.2.1",
-    "socket.io": "^4.7.4"
+    "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
