--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2021",
-    "module": "commonjs",
+    "module": "ESNext",
     "outDir": "./dist",
     "removeComments": true,
     "esModuleInterop": true,
