--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,19 @@ on:
       - "tests/**"
 
 jobs:
+  check_changes:
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@v5
+        with:
+          paths: '["tests/**"]'
+
   test:
+    needs: check_changes
+    if: ${{ needs.check_changes.outputs.should_skip == 'false' }}
     runs-on: ubuntu-latest
     steps:
       - name: 🚀 Checkout code
