build(Build): :bug: Not relying on Githubs path's check anymore

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,11 +1,5 @@
 name: Run Tests and Coverage
-on:
-  push:
-    paths:
-      - "tests/**"
-  pull_request:
-    paths:
-      - "tests/**"
+on: [push, pull_request]
 
 jobs:
   check_changes:
