--- a/docs/package.json
+++ b/docs/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "@babel/parser": "^7.24.0",
     "@babel/traverse": "^7.24.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@tailwindcss/typography": "^0.5.10",
     "@vercel/analytics": "^1.2.2",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-redux": "^9.1.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
