--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
+    "composite": true,
     "module": "CommonJS",
-    "outDir": "./dist",
+    "outDir": "dist",
+    "target": "ES2021",
     "removeComments": true,
-    "esModuleInterop": true,
     "strict": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "sourceMap": true,
     "declaration": true,
     "experimentalDecorators": true,
@@ -15,6 +16,7 @@
     "resolveJsonModule": true,
     "noLib": false,
     "baseUrl": ".",
+    "types": ["node"],
     "paths": {
       "@metaroute/*": ["./src/core/*"],
       "@metaroute/api/*": ["./src/core/api/*"],
